tests/expectations/compiler/function/global_shadow_function_fail.out
Error [EAST0372006]: function `f1` shadowed by
    --> compiler-test:9:5
     |
   9 |     function f1(a: u8) -> u8 {
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
  10 |         return a * 100u8;
     |         ^^^^^^^^^^^^^^^^^
  11 |     }
     |     ^
